[gd_scene load_steps=50 format=2]

[ext_resource path="res://Scripts/Intro.gd" type="Script" id=1]
[ext_resource path="res://Fonts/LACONIC_LIGHT.OTF" type="DynamicFontData" id=2]
[ext_resource path="res://Sounds/marker1.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sounds/marker2.ogg" type="AudioStream" id=4]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/newsClose_circle.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/newsClose_ohBoy.png" type="Texture" id=6]
[ext_resource path="res://Sounds/newspap2.ogg" type="AudioStream" id=7]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0049.png" type="Texture" id=8]
[ext_resource path="res://Sounds/Music/crime-mystery-04.ogg" type="AudioStream" id=9]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0048.png" type="Texture" id=10]
[ext_resource path="res://Shaders/BlurScreen.gdshader" type="Shader" id=15]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0046.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0047.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0033.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0035.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0037.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0028.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0029.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0026.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0045.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0036.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0030.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0027.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0038.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0032.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0034.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0031.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0025.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0040.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0043.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0042.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0044.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0041.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/zoomPap0039.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Cutscenes/NewsIntro/newsClose.png" type="Texture" id=51]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ null ],
"loop": false,
"name": "default",
"speed": 30.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 26 ), ExtResource( 30 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 29 ), ExtResource( 35 ), ExtResource( 32 ), ExtResource( 21 ), ExtResource( 33 ), ExtResource( 22 ), ExtResource( 28 ), ExtResource( 23 ), ExtResource( 31 ), ExtResource( 49 ), ExtResource( 39 ), ExtResource( 45 ), ExtResource( 43 ), ExtResource( 40 ), ExtResource( 44 ), ExtResource( 27 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 10 ), ExtResource( 8 ) ],
"loop": false,
"name": "zoom",
"speed": 30.0
} ]

[sub_resource type="Animation" id=6]
resource_name = "HQIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "SlowZoom"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1.3, 1.3 ), Vector2( 1.5, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 15 )
shader_param/lod = 6.0

[sub_resource type="Animation" id=4]
resource_name = "Deblur"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6, 2.5 ),
"transitions": PoolRealArray( -2, -2, 1 ),
"update": 0,
"values": [ 0.0, 6.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 6.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "Circle"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ 0.0, 100.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../OhBoy:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 2.5 ),
"transitions": PoolRealArray( 0, -2, 1 ),
"update": 0,
"values": [ 55.0, 55.0, 80.0 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("AudioStreamPlayer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "play"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("AudioStreamPlayer2")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:page")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:value")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../OhBoy:value")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="DynamicFont" id=10]
size = 26
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 8
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=13]
resource_name = "ClickIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=14]
resource_name = "ClickOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( -2, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[node name="Intro" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )

[node name="Zoom" type="AnimatedSprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 3, 3 )
frames = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Zoom"]
stream = ExtResource( 7 )
volume_db = -12.0
autoplay = true

[node name="NewsClose" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 960, 540 )
scale = Vector2( 2, 2 )
texture = ExtResource( 51 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="NewsClose"]
anims/HQIn = SubResource( 6 )
anims/RESET = SubResource( 7 )

[node name="NewsFar" type="Sprite" parent="."]
position = Vector2( 960, 540 )
scale = Vector2( 3, 3 )
texture = ExtResource( 38 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="NewsFar"]
autoplay = "SlowZoom"
reset_on_save = false
anims/RESET = SubResource( 8 )
anims/SlowZoom = SubResource( 9 )

[node name="BlurRect" type="ColorRect" parent="."]
visible = false
material = SubResource( 3 )
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="BlurRect"]
anims/Deblur = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="RedCircle" type="TextureProgress" parent="."]
margin_right = 960.0
margin_bottom = 540.0
rect_scale = Vector2( 2, 2 )
texture_progress = ExtResource( 5 )
fill_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="RedCircle"]
anims/Circle = SubResource( 11 )
anims/RESET = SubResource( 12 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="RedCircle"]
stream = ExtResource( 3 )
volume_db = -4.0
pitch_scale = 1.05

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="RedCircle"]
stream = ExtResource( 4 )
volume_db = -4.0
pitch_scale = 1.05

[node name="ClickLab" type="Label" parent="."]
visible = false
margin_left = 106.0
margin_top = 946.0
margin_right = 1880.0
margin_bottom = 1046.0
rect_min_size = Vector2( 0, 100 )
custom_colors/font_color = Color( 0.811765, 0.745098, 0.52549, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 10 )
text = "Click to continue."
align = 2
valign = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ClickLab"]
anims/ClickIn = SubResource( 13 )
anims/ClickOut = SubResource( 14 )
anims/RESET = SubResource( 15 )

[node name="OhBoy" type="TextureProgress" parent="."]
margin_right = 960.0
margin_bottom = 540.0
rect_scale = Vector2( 2, 2 )
texture_progress = ExtResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -26.0

[connection signal="animation_finished" from="Zoom" to="." method="_on_Zoom_animation_finished"]
